1.3.6
- Added scope analysis. Protected an private variables are treated
  as public in case they are reachable with the called scope.
- Change: Replaced the option analysePublicMethods with
  analyseMethodsAtall. The old option does not really make sense
  anymore, since we indtroduced the scope analysis.
- Bugfix added the "$" in front of static properties.

1.3.5
- Added code analysis to determine the name of the variable we are
  analysing.
- Added warning to tell the user that we are not starting an other
  analysis, because we will reach output => maxCall.
- Bugfix: Recursion clicking does not produce double ids anymore.

1.3.4
- Added closure analysis.
- Bugfix: Hans skin tries to close some left-over html tag to get a
  proper display
- Change: Removed the jQuery setting
- Bugfix: The display of the settings in the footer does do a
  callable analysis anymore, which may be a little bit confusing.
- Bugfix: Fixed a small display issue with the search in the Hans
  skin
- Bugfix: The Collapse-Everything-Else function from the hans skin
  does not affect other debug output anymore.

1.3.3
- kreXX will now work without a writable chunks folder, but this will
  require a much more memory.
- Bugfix: No data from the Magento debug() function when uses as a
  configurable debug function.
- Bugfix: String encoding detection now works as intended. This should
  speed up things a lot.
- Bugfix: Dual output (file and frontend) works again.
- Bugfix: CLI detection now respects file output configuration.
- Bugfix: X-Browser Adjustments for the Hans skin.
- Change: Restructured the output, to make it (hopefully) better
  readable. The format is now much more similar to the actual code.
- Change: Refactored file handling (chunks and logfiles).
- Change: Cleaned up the file structure.
- Change: kreXX will now evaluate all cookie settings right away, and
  not when the value is actually needed (if at all).

1.3.2
- Bugfix: Removed that annoying "Hidden internal properties"