@@ -1,4 +1,4 @@
-<li class="kchild">
+<li class="kchild" data-source="{gensource}">
   <div class="kel kcopyFrom krecursion" data-domid="{domId}">
     <span class="kel-bg krecursion">&nbsp;</span>
     <span class="kname">{connector1}{name}{connector2}</span>
